Fixed 'lastUpdated' column to render the correct value and fixed spacing

--- a/app/shared/components/target-list-expanded/expanded.scss
+++ b/app/shared/components/target-list-expanded/expanded.scss
@@ -54,6 +54,10 @@
       width: calc(100% - 50px);
     }
 
+    .stats > .accent {
+      margin-top: 3em;
+    }
+
     ul.dropdown-menu li {
       display: none;
       opacity: 0;
